--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="main">
+        <div class="logo-container"></div>
     </div>
 
     <script src="index.js" defer></script>
