--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Estudio MitS</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Estudio MITS</title>
 </head>
 <body>
     <div class="main">
+        <div class="navbar">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li class="nav-item"><a href="#"><i class="far fa-envelope"></i></a></li>
+            </ul>
+        </div>
         <div class="logo-container"></div>
+        <div class="footer">
+            <p>Estamos desarrollando nuestra web. Seguinos en Instagram o contactanos 👆 para estar al tanto de todas las novedades y lanzamientos!</p>
+        </div>
     </div>
 
     <script src="index.js" defer></script>
