adding facebook link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="main">
         <div class="navbar">
             <ul class="nav-list">
+                <li class="nav-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="nav-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li class="nav-item"><a href="#"><i class="far fa-envelope"></i></a></li>
             </ul>
