adding bg image and general styling, and pinterest link

--- a/index.html
+++ b/index.html
@@ -14,15 +14,19 @@
 <body>
     <div class="main">
         <div class="navbar">
-            <ul class="nav-list">
+            <div class="navbar-contact">
+                <p>CONTACTAR</p>
+                <a class="navbar-contact-link" href="#"><i class="far fa-envelope"></i></a>
+            </div>
+            <ul class="navbar-list-social">
                 <li class="nav-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                 <li class="nav-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="nav-item"><a href="#"><i class="far fa-envelope"></i></a></li>
+                <li class="nav-item"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
             </ul>
         </div>
         <div class="logo-container"></div>
         <div class="footer">
-            <p>Estamos desarrollando nuestra web. Seguinos en Instagram o contactanos 👆 para estar al tanto de todas las novedades y lanzamientos!</p>
+            <p>Estamos desarrollando nuestra web. Seguinos en Instagram o contactanos<br>para estar al tanto de todas las novedades y lanzamientos!</p>
         </div>
     </div>
 
