adding href links, transparent logo and changing fonts

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Estudio MITS</title>
 </head>
@@ -16,12 +16,12 @@
         <div class="navbar">
             <div class="navbar-contact">
                 <p>CONTACTAR</p>
-                <a class="navbar-contact-link" href="#"><i class="far fa-envelope"></i></a>
+                <a class="navbar-contact-link" href="#" target="_blank" rel="noopener noreferrer"><i class="far fa-envelope"></i></a>
             </div>
             <ul class="navbar-list-social">
-                <li class="nav-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="nav-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li class="nav-item"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+                <li class="nav-item"><a href="https://instagram.com/estudiomits?utm_medium=copy_link" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
+                <li class="nav-item"><a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a></li>
+                <li class="nav-item"><a href="https://ar.pinterest.com/estudiomits/_saved/" target="_blank" rel="noopener noreferrer"><i class="fab fa-pinterest-p"></i></a></li>
             </ul>
         </div>
         <div class="logo-container"></div>
