--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="main">
         <div class="navbar">
             <div class="navbar-contact">
-                <p>CONTACTAR</p>
-                <a class="navbar-contact-link" href="#" target="_blank" rel="noopener noreferrer"><i class="far fa-envelope"></i></a>
+                <p class="navbar-contact-title">CONTACTAR</p>
+                <a class="navbar-contact-link" href="mailto:somos@estudiomits.com.ar?subject=Contacto"><i class="far fa-envelope"></i></a>
             </div>
             <ul class="navbar-list-social">
                 <li class="nav-item"><a href="https://instagram.com/estudiomits?utm_medium=copy_link" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a></li>
@@ -24,9 +24,10 @@
                 <li class="nav-item"><a href="https://ar.pinterest.com/estudiomits/_saved/" target="_blank" rel="noopener noreferrer"><i class="fab fa-pinterest-p"></i></a></li>
             </ul>
         </div>
-        <div class="logo-container"></div>
+        <!-- <div class="logo-container"></div> -->
+        <img class="logo-container" src="./images/logo-transparent.png" alt="brand-logo">
         <div class="footer">
-            <p>Estamos desarrollando nuestra web. Seguinos en Instagram o contactanos<br>para estar al tanto de todas las novedades y lanzamientos!</p>
+            <p class="footer-text">Estamos desarrollando nuestra web. Seguinos en Instagram o contactanos<br>para estar al tanto de todas las novedades y lanzamientos!</p>
         </div>
     </div>
 
