fixing responsiveness logo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- <div class="logo-container"></div> -->
         <img class="logo-container" src="./images/logo-transparent.png" alt="brand-logo">
         <div class="footer">
-            <p class="footer-text">Estamos desarrollando nuestra web. Seguinos en Instagram o contactanos<br>para estar al tanto de todas las novedades y lanzamientos!</p>
+            <p class="footer-text">Estamos desarrollando nuestra web.<br>Seguinos en Instagram o contactanos para estar al tanto de todas las novedades y lanzamientos!</p>
         </div>
     </div>
 
